separate div for note spacing and more specific numbering for spacing, which is bad but still looking nice so I'm keeping for now. Noted return of duplicate ID issue.

--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,6 @@ button:hover {
 }
 
 .noteapp-container {
-    /*display: flex;*/
     width: 100%;
     min-height: 100vh;
 }
@@ -26,7 +25,6 @@ button:hover {
 .notes_sidebar {
     width: 4em;
     position: absolute;
-    /*float: left;*/
     overflow-y: auto;
     height: 100%;
     max-height: 100vh;
@@ -34,7 +32,6 @@ button:hover {
     flex-direction: column;
     gap: 2em;
     align-items: center;
-    /*overflow-x: hidden;*/
 }
 
 .notes_sidebar-note {
@@ -76,15 +73,7 @@ button:hover {
     min-height: 48px;
 }
 
-/*
-.notes_sidebar-note_selected button {
-    background-color: var(--special-color);
-    color: var(--bg-color);
-}*/
-
 #notes_sidebar-add_note {
-    /*width: 48px;
-    height: 48px;*/
     min-width: 48px;
     min-height: 48px;
     margin: var(--common-spacing) auto;
@@ -99,13 +88,17 @@ button:hover {
     background-color: var(--special-color);
 }
 
+.notes_sidebar-note_spacer {
+    display: flex;
+    flex-direction: column;
+    gap: 5em;
+}
+
 .editor {
     width: fit-content;
     min-width: 90%;
     height: 100%;
-    margin-left: 4em;
-    /*margin-left: 1em;
-    float: right;*/
+    margin-left: 5em;
 }
 
 .editor-textstyle {
@@ -125,7 +118,6 @@ button:hover {
 .editor-textstyle button:active {
     background-color: var(--special-color);
     color: var(--bg-color);
-    /*border-radius: 4px;*/
 }
 
 #editor-titlewindow {
